remove jobs
